--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body id="page-top" class="index">
 
     <!-- Navigation -->
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom" style="background-color:#3f4a4e">
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -88,7 +88,7 @@
                 <div class="col-lg-12">
                     <h2 class="section-heading" style="text-align:center">About Me</h2>
                     <hr>
-                    <p class="para-text">I am a quick learner and quite curious to explore and learn different technologies, frameworks. And exploring new places is the thing that I love most! Being from a computer science background I am well versed in the algorithms and Datastructures. I will call myself a fullstack developer with a slightly more interest towards Frontend development. I like to meet people from different fields  and discuss different things. It will be an understatement, if I say anything other than 'I am an awesome team player'!</p>
+                    <p class="para-text">I am a quick learner and quite curious to explore and learn different technologies, frameworks. And ex-ploring new places is the thing that, I love the most! Being from a computer science background I am well versed in the algorithms and Datastructures. I will call myself a fullstack developer with a slightly more interest towards Frontend Development. I like to meet people from different fields  and discuss different things. It will be an understatement, if I say anything other than 'I am an awesome team player'!</p>
                 </div>
             </div>
             </div>
@@ -421,6 +421,7 @@
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
     <!-- Theme JavaScript -->
     <script src="js/portfolio.js"></script>
+    <script src="js/page-scroller.js"></script>
     <script src="js/resume.js"></script>
 
 </body>
