--- a/index.html
+++ b/index.html
@@ -304,21 +304,28 @@
                     <hr>
                     <form class="form-horizontal" role="form">
                     <div class="form-group">
-                      <label class="control-label col-sm-4 social-text" for="text">Name:</label>
+                      <label class="control-label col-sm-4 social-text" for="name">Name:</label>
                       <div class="col-sm-8">
-                        <input type="text" class="form-control" id="usr" placeholder="Enter your name">
+                        <input name="name" type="text" class="form-control" id="name" placeholder="enter your name">
                       </div>
                     </div>
                     <div class="form-group">
                       <label class="control-label col-sm-4 social-text" for="email">Email:</label>
                       <div class="col-sm-8">
-                        <input type="email" class="form-control" id="email" placeholder="Enter email">
+                        
+                        <input name="email" type="email" class="form-control" id="email" placeholder="enter your email">
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-sm-4 social-text" for="pwd">Message:</label>
+                      <label class="control-label col-sm-4 social-text" for="mobile">Phone:</label>
                       <div class="col-sm-8">
-                        <textarea class="form-control" rows="2" id="Your Message" placeholder="message"></textarea>
+                        <input name="phone" type="number" class="form-control" id="mobile" placeholder="enter number">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="control-label col-sm-4 social-text" for="message">Message:</label>
+                      <div class="col-sm-8">
+                        <input name="message" type="text" class="form-control" id="message" placeholder="Enter message">
                       </div>
                     </div>
                     
@@ -423,6 +430,7 @@
     <script src="js/portfolio.js"></script>
     <script src="js/page-scroller.js"></script>
     <script src="js/resume.js"></script>
+    <script src="js/form.js"></script>
 
 </body>
 
